# MCP-Elevenlab-Scribe-ASR

./: .gitignore  LICENSE  README.md  pyproject.toml
elevenlabs_scribe_mcp_server/: __init__.py  main.py
elevenlabs_scribe_mcp_server/mcp/: __init__.py  elevenlabs.py  protocol.py  types.py
examples/: client_example.py
tests/: test_transcribe.py
